Fix column gap calculations

--- a/_embed/templates/theme-global/stylesheet/09-columns.css
+++ b/_embed/templates/theme-global/stylesheet/09-columns.css
@@ -26,7 +26,7 @@
 	vertical-align:top;
 	flex-grow:0;
 	flex-shrink:0;
-	flex-basis: calc(100% / var(--cols) - var(--gap));
+	flex-basis: calc(( 100% - ((var(--cols) - 1) * var(--gap))) / var(--cols));
 }
 
 .columns-6 > .col-2x,
